# Local-Level-INS-Mechanization

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.h  EarthModel.h  IMUCalibration.h  INSMechanization.h  Utilities.h
results/: position_output.csv
scripts/: plot_data.py
src/: EarthModel.cpp  IMUCalibration.cpp  INSMechanization.cpp  INSMechanization.h  Utilities.cpp  main.cpp
